<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:background="@color/darkBlueGrey">

        <TextView
                android:id="@+id/photo_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawablePadding="4dp"
                android:layout_gravity="start|center_vertical"
                android:drawableStart="@mipmap/ic_back_white"
                android:textSize="@dimen/small_text_size"
                android:gravity="center"
                android:text="@string/pg_str_cancel"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/photo_tv_file"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/small_text_size"
                android:layout_gravity="end|center_vertical"
                android:text="@string/pg_str_album"
                android:textColor="@color/white"/>
        <TextView
                android:id="@+id/photo_tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pg_str_all"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                android:layout_gravity="center"/>
    </FrameLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <android.support.v7.widget.RecyclerView
                    android:id="@+id/photo_rv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    app:layoutManager="android.support.v7.widget.GridLayoutManager"
                    app:spanCount="4"
                    tools:listitem="@layout/graph_item_selected"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:background="@color/paleBlue"
                    android:layout_height="@dimen/media_choose_bottom_bar_height">

                <TextView
                        android:id="@+id/photo_tv_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:gravity="center"
                        android:text="@string/pg_str_preview"
                        android:textColor="@drawable/photo_enabled_text"
                        android:textSize="@dimen/medium_text_size"/>

                <CheckBox
                        android:id="@+id/photo_cb_original"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@drawable/photo_enabled_text"
                        android:layout_gravity="center"
                        android:textSize="@dimen/medium_text_size"
                        android:text="@string/pg_str_full_images_tip"/>

                <TextView
                        android:id="@+id/photo_tv_done"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:background="@color/paleBlue"
                        android:enabled="false"
                        android:layout_gravity="end"
                        android:gravity="center"
                        android:text="@string/pg_str_send"
                        android:textColor="@drawable/photo_enabled_text"
                        android:textSize="@dimen/medium_text_size"/>
            </FrameLayout>
        </LinearLayout>
        <com.zj.album.ui.views.BaseLoadingView
                android:id="@+id/photo_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundFill="#a2ffffff"
                app:backgroundOnAct="#90ffffff"/>
    </FrameLayout>
</LinearLayout>