<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlueGrey"
        android:orientation="vertical">

    <com.zj.album.ui.preview.images.BannerViewPager
            android:id="@+id/preview_vp"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:background="@color/black"
            android:layout_height="match_parent"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:background="@color/darkBlueGrey">

        <TextView
                android:id="@+id/preview_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawablePadding="4dp"
                android:layout_gravity="start|center_vertical"
                android:drawableStart="@mipmap/ic_back_white"
                android:textSize="@dimen/small_text_size"
                android:gravity="center"
                android:text="@string/pg_str_cancel"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/preview_tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="3dp"
                android:minWidth="24dp"
                android:minHeight="24dp"
                android:gravity="center"
                android:background="@drawable/bg_choose_local_media"
                android:textColor="@color/darkBlueGrey"
                android:textSize="@dimen/x_small_text_size"/>

        <TextView
                android:id="@+id/preview_tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pg_str_preview"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                android:layout_gravity="center"/>
    </FrameLayout>


    <LinearLayout
            android:id="@+id/preview_ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/preview_rv_select"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:visibility="gone"
                android:background="@color/black50"
                android:overScrollMode="never"
                android:scrollbars="none"/>
        <FrameLayout
                android:layout_width="match_parent"
                android:background="@color/paleBlue"
                android:layout_height="@dimen/media_choose_bottom_bar_height">

            <CheckBox
                    android:id="@+id/preview_cb_original"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@drawable/photo_enabled_text"
                    android:textSize="@dimen/medium_text_size"
                    android:text="@string/pg_str_full_images_tip"/>

            <TextView
                    android:id="@+id/preview_tv_done"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@color/paleBlue"
                    android:enabled="false"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/pg_str_send"
                    android:textColor="@drawable/photo_enabled_text"
                    android:textSize="@dimen/medium_text_size"/>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>